--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "express": "^4.22.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^8.22.1"
+    "mongoose": "^8.22.1",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
